--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react-dom": "^17.0.11",
     "concurrently": "^7.0.0",
     "express": "^4.17.2",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.15",
+    "normalizr": "^3.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -22,6 +24,7 @@
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
+    "roman-numerals": "^0.3.2",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
