--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-router5": "^8.0.1",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
     "roman-numerals": "^0.3.2",
+    "router5": "^8.0.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
