--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/react-dom": "^17.0.11",
     "concurrently": "^7.0.0",
     "express": "^4.17.2",
+    "final-form": "^4.20.6",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.15",
     "normalizr": "^3.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.8",
+    "react-hook-form": "^7.26.1",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
